--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.6.2",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
