--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "fs-extra": "^10.0.0",
     "http-status-codes": "^2.1.4",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.12",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5",
@@ -24,6 +26,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.12",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.6.2",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
