--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http-status-codes": "^2.1.4",
     "multer": "^1.4.3",
     "nodemon": "^2.0.12",
+    "sharp": "^0.29.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5",
     "uuid": "^8.3.2"
@@ -29,6 +30,7 @@
     "@types/fs-extra": "^9.0.12",
     "@types/multer": "^1.4.7",
     "@types/node": "^16.6.2",
+    "@types/sharp": "^0.28.5",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
