--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Anna Tolstova",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "http-status-codes": "^2.1.4",
