--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "sharp": "^0.29.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
